# internal/controller/http/v1/exchange.go
@@ -5,7 +5,6 @@ import (
 
 	"github.com/gin-gonic/gin"
 
-	//"github.com/evrone/go-clean-template/internal/entity"
 	"yarus-tz/internal/entity"
 	"yarus-tz/internal/usecase"
 
@@ -27,8 +26,11 @@ func newExchangeRoutes(handler *gin.RouterGroup, e usecase.ExchangeUseCase, l lo
 	}
 }
 
+type doExchangeRequest struct {
+}
+
 // @Summary     Exchange
-// @Description Translate a text
+// @Description Exchange currency on Ruble
 // @ID          do-exchange
 // @Tags  	    exchangee
 // @Accept      json
@@ -41,10 +43,6 @@ func newExchangeRoutes(handler *gin.RouterGroup, e usecase.ExchangeUseCase, l lo
 func (r *exchangeRoutes) doExchange(c *gin.Context) {
 
 	currency := c.Param("currency")
-	// if currency == "" {
-	// 	//TODO get random value from map
-	// 	panic("implement me")
-	// }
 
 	exchange, err := r.e.Exchange(
 		c.Request.Context(),
@@ -54,12 +52,10 @@ func (r *exchangeRoutes) doExchange(c *gin.Context) {
 	)
 	if err != nil {
 		r.l.Error(err, "http - v1 - doTranslate")
-		//errorResponse(c, http.StatusInternalServerError, "exchange service problems")
+		errorResponse(c, http.StatusInternalServerError, "exchange service problems")
 
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		exchange.Currency: exchange.Response,
-	})
+	c.JSON(http.StatusOK, exchange)
 }
